Modeled helicoptor.  Working on animation of propellers.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,7 +25,8 @@ if (APPLE)
   find_library(COREVID_LIBRARY CoreVideo REQUIRED)
 endif (APPLE)
 
-set(SOURCE_FILES main.cpp WheelTemp.cpp Shapes/Ring.cpp Shapes/TruncCone.cpp Shapes/UnitCube.cpp)
+set(SOURCE_FILES main.cpp WheelTemp.cpp Shapes/Ring.cpp Shapes/TruncCone.cpp Shapes/UnitCube.cpp
+ Helicopter/Propeller.cpp Helicopter/Helicopter.cpp)
 add_executable(Proj2 ${SOURCE_FILES})
 
 
